--- a/Yanez-Portfolio/index.html
+++ b/Yanez-Portfolio/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="header">
-  <h1 class="site-title">Yanez' Portfolio</h1>
+  <h1 class="site-title">Yanez<span>' Portfolio</span></h1>
 
   <span class="nav-icon" id="navToggle">☰</span>
 
